// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Component API/InputGroup Button add-on 1`] = `
<div
  dir="ltr"
>
  <div
    className="fddocs-container"
  >
    <div
      className="fd-input-group"
    >
      <input
        className="fd-input fd-input-group__input"
        type="text"
      />
      <span
        className="fd-input-group__addon fd-input-group__addon--button"
      >
        <button
          className="fd-button fd-button--transparent fd-input-group__button"
          type="button"
        >
          <i
            aria-hidden={true}
            className="sap-icon--navigation-down-arrow"
            role="img"
          />
        </button>
      </span>
    </div>
    <div
      className="fd-input-group"
    >
      <span
        className="fd-input-group__addon fd-input-group__addon--button"
      >
        <button
          className="fd-button fd-button--transparent fd-input-group__button"
          type="button"
        >
          <i
            aria-hidden={true}
            className="sap-icon--navigation-down-arrow"
            role="img"
          />
        </button>
      </span>
      <input
        className="fd-input fd-input-group__input"
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Component API/InputGroup Compact 1`] = `
<div
  dir="ltr"
>
  <div
    className="fd-input-group"
  >
    <span
      className="fd-input-group__addon fd-input-group__addon--button fd-input-group__addon--compact"
    >
      <button
        className="fd-button fd-button--transparent fd-button--compact fd-input-group__button"
        type="button"
      >
        <i
          aria-hidden={true}
          className="sap-icon--navigation-down-arrow"
          role="img"
        />
      </button>
    </span>
    <input
      className="fd-input fd-input--compact fd-input-group__input"
      type="text"
    />
  </div>
</div>
`;

exports[`Storyshots Component API/InputGroup Dev 1`] = `
<div
  dir="ltr"
>
  <div
    className="fd-input-group"
  >
    <input
      className="fd-input fd-input-group__input"
      disabled={false}
      type="text"
    />
    <span
      className="fd-input-group__addon fd-input-group__addon--button"
      disabled={false}
    >
      <button
        className="fd-button fd-button--transparent fd-input-group__button"
        type="button"
      >
        <i
          aria-hidden={true}
          className="sap-icon--navigation-down-arrow"
          role="img"
        />
      </button>
    </span>
  </div>
</div>
`;

exports[`Storyshots Component API/InputGroup Disabled 1`] = `
<div
  dir="ltr"
>
  <div
    className="fd-input-group is-disabled"
  >
    <span
      className="fd-input-group__addon fd-input-group__addon--button"
      disabled={true}
    >
      <button
        className="fd-button fd-button--transparent fd-input-group__button"
        type="button"
      >
        <i
          aria-hidden={true}
          className="sap-icon--navigation-down-arrow"
          role="img"
        />
      </button>
    </span>
    <input
      className="fd-input fd-input-group__input"
      disabled={true}
      type="text"
    />
  </div>
</div>
`;

exports[`Storyshots Component API/InputGroup Icon add-on 1`] = `
<div
  dir="ltr"
>
  <div
    className="fddocs-container"
  >
    <div
      className="fd-input-group"
    >
      <span
        className="fd-input-group__addon"
      >
        <i
          className="sap-icon--globe"
          role="img"
        />
      </span>
      <input
        className="fd-input fd-input-group__input"
        placeholder="Type text here"
        type="text"
      />
    </div>
    <div
      className="fd-input-group"
    >
      <input
        className="fd-input fd-input-group__input"
        placeholder="Type text here"
        type="text"
      />
      <span
        className="fd-input-group__addon"
      >
        <i
          className="sap-icon--hide"
          role="img"
        />
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Component API/InputGroup Primary 1`] = `
<div
  dir="ltr"
>
  <div
    className="fd-input-group"
  >
    <span
      className="fd-input-group__addon fd-input-group__addon--button"
    >
      <button
        className="fd-button fd-button--transparent fd-input-group__button"
        type="button"
      >
        <i
          aria-hidden={true}
          className="sap-icon--navigation-down-arrow"
          role="img"
        />
      </button>
    </span>
    <input
      className="fd-input fd-input-group__input"
      type="text"
    />
  </div>
</div>
`;

exports[`Storyshots Component API/InputGroup Text Area 1`] = `
<div
  dir="ltr"
>
  <div
    className="fd-input-group"
  >
    <textarea
      className="fd-textarea fd-input-group__input"
      defaultValue="Default"
      onChange={[Function]}
    />
    <span
      className="fd-input-group__addon"
    >
      <i
        className="sap-icon--hide"
        role="img"
      />
    </span>
  </div>
</div>
`;

exports[`Storyshots Component API/InputGroup Text add-on 1`] = `
<div
  dir="ltr"
>
  <div
    className="fddocs-container"
  >
    <div
      className="fd-input-group"
    >
      <span
        className="fd-input-group__addon"
      >
        €
      </span>
      <input
        className="fd-input fd-input-group__input"
        placeholder="Type text here"
        type="text"
      />
    </div>
    <div
      className="fd-input-group"
    >
      <input
        className="fd-input fd-input-group__input"
        placeholder="Type text here"
        type="text"
      />
      <span
        className="fd-input-group__addon"
      >
        €
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Component API/InputGroup Validation State 1`] = `
<div
  dir="ltr"
>
  <div
    className="fddocs-container"
  >
    <div
      className="fd-popover"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <div
        onFocus={[Function]}
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      >
        <div
          className="fd-popover__control"
        >
          <div
            className="fd-input-group is-error"
          >
            <span
              className="fd-input-group__addon"
            >
              $
            </span>
            <input
              className="fd-input fd-input-group__input"
              type="text"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="fd-popover"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <div
        onFocus={[Function]}
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      >
        <div
          className="fd-popover__control"
        >
          <div
            className="fd-input-group is-warning"
          >
            <span
              className="fd-input-group__addon"
            >
              $
            </span>
            <input
              className="fd-input fd-input-group__input"
              type="text"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="fd-popover"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <div
        onFocus={[Function]}
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      >
        <div
          className="fd-popover__control"
        >
          <div
            className="fd-input-group is-information"
          >
            <span
              className="fd-input-group__addon"
            >
              $
            </span>
            <input
              className="fd-input fd-input-group__input"
              type="text"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="fd-popover"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <div
        onFocus={[Function]}
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      >
        <div
          className="fd-popover__control"
        >
          <div
            className="fd-input-group is-success"
          >
            <span
              className="fd-input-group__addon"
            >
              $
            </span>
            <input
              className="fd-input fd-input-group__input"
              type="text"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
